--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ $(document)
       <div class="adr">
         <p class="p3">
           <strong>E-mail:</strong> <a href="mailto:bstanzl@yahoo.co.uk" class="clr-1">bstanzl@yahoo.co.uk</a></p>   
-       
+       <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script> 
       </div>
     </div>
   </div>
