buy me a coffee on every page 01
Putting buy me a coffee on every page

--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,9 @@ $(document)
   </div>
 </section>
 <!--==============================footer=================================-->
-<footer> <span><strong>© 2015 Barbara Stanzl</strong><br>
+<footer>
+ <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script> 
+ <span><strong>© 2019 Barbara Stanzl</strong><br>
  </footer>
 </body>
 </html>
