--- a/society_6.html
+++ b/society_6.html
@@ -62,6 +62,6 @@
     </div>
 </section>
 <!--==============================footer=================================-->
-<footer>  </footer>
+<footer> <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script>  </footer>
 </body>
 </html>
