--- a/Collections.html
+++ b/Collections.html
@@ -71,6 +71,7 @@
       </div>
    </div>
   </div>
+  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script> 
 </section>
 <!--==============================footer=================================-->
 <footer>  </footer>
