--- a/masks_2017_photographs.html
+++ b/masks_2017_photographs.html
@@ -77,5 +77,6 @@ jQuery(window).load(function () {
   </div>
 </div>
 <script src="js/bootstrap.js"></script>
+<script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script> 
 </body>
 </html>
