Updated video page
Wrong title on video
Removed buy me a coffee widget

--- a/video.html
+++ b/video.html
@@ -62,14 +62,14 @@
               <strong class="upper">My Words</strong><br>
               This video was first shown in Venice as part of Empire II.</p>
             <br />
-            <h2 class="h2 p2">Windy Birthday</h2>
+            <h2 class="h2 p2">Birthday in Lockdown</h2>
        <br />
             <p> <video poster="video/pre_image_windy.JPG" width="960" height="540" controls>
                  <source src="video/Windy-Birthday-compressed-v1.m4v" type="video/mp4">
                  Your browser does not support the video tag.
                  </video>
                  <br>
-              <strong class="upper">My Words</strong><br>
+              <strong class="upper">Birthday in Lockdown</strong><br>
               This video was first shown in Vienna.</p>
             <br />
            </div>
@@ -79,6 +79,6 @@
       </div>
 </section>
 <!--==============================footer=================================-->
-<footer> <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#46b798', 'L3L5VPRP');kofiwidget2.draw();</script>  </footer>
+<footer> </footer>
 </body>
 </html>
